--- a/nlp.html
+++ b/nlp.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
+<h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -112,11 +112,11 @@
 <p>Oct 7, 2019 ... The Software Engineer will use machine learning to generate simulated content 
 on various websites and social media platforms that will then be used for?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/charlesriveranalytics90/jobs/1919251'>Job Application for Natural Language Processing Intern, Winter/Spring 2020 at Charles River Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/charlesriveranalytics90/jobs/1919251'>Job Application for Natural Language Processing Intern, Winter/Spring 2020 at Charles River Analytics</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999697071120-developpeurs-en-apprentissage-automatique-en-taln-ml-developers-for-nlp'>Huawei Technologies Canada Co., Ltd. D?veloppeurs en apprentissage automatique en TALN / ML Developers for NLP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999697071120-developpeurs-en-apprentissage-automatique-en-taln-ml-developers-for-nlp'>Huawei Technologies Canada Co., Ltd. D?veloppeurs en apprentissage automatique en TALN / ML Developers for NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -145,7 +145,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -155,7 +155,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -179,7 +179,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/outreach/243afb93-d48c-4011-ade9-ad15ab852d5a'>Outreach - Data Science Manager - Natural Language Processing</a></h5> 
+<h5><a href='https://jobs.lever.co/outreach/243afb93-d48c-4011-ade9-ad15ab852d5a'>Outreach - Data Science Manager - Natural Language Processing</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
@@ -195,7 +195,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Boston, MANew York, New York San Mateo, CA  North America</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/4330353C58'>KNOREX - Jobs: Research Scientist (NLP) - Python, Java - Apply ...</a></h5> 
+<h5><a href='https://www.workable.com/j/4330353C58'>KNOREX - Jobs: Research Scientist (NLP) - Python, Java - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... ... to deliver the right marketing message to the right audience at the right moment 
 and right place, underpinned by a multi-layered data-driven approach. Knorex?...</p>
@@ -220,11 +220,11 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Alpharetta, GA Atlanta</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879415'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879415'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -264,7 +264,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
+<h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -289,11 +289,11 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
+<h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -365,7 +365,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>Aug 15, 2019 ... Data Scientist NLP (Entale). London, United Kingdom. Accelerator ? Engineering
 . Full-time. Apply for this job. We are looking for a talented Data Scientist to?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
